<resources>
    <string name="app_name">Pocket Trekk</string>
    <string name="listen_btn" translatable="false">Listen</string>
    <string name="send_btn">Send</string>
    <string name="status_label">Status</string>
    <string name="listDevices_btn">List Devices</string>
    <string name="message_label">Message</string>
    <string name="message_writetext">Write message...</string>
    <string name="permdesc_flashlight">Flash Light</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login2" translatable="false">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="flashlight_on">Flashlight: ON</string>
    <string name="flashlight_off">Flashlight: OFF</string>
    <string name="flashlight_alert">First turn off your SOS Flashlight!</string>
    <string name="sos_flashlight_off">SOS Flashlight: OFF</string>
    <string name="sos_flashlight_on">SOS Flashlight: ON</string>
    <string name="weight">"Weight: "</string>
    <string name="age">"Age: "</string>
    <string name="bag_weight">"Bag Weight: "</string>
    <string name="batery_75">Batery less than 75%</string>
    <string name="batery_50">Batery less than 50%</string>
    <string name="batery_25">Batery less than 25%</string>
    <string name="batery_15">Batery less than 15%</string>
    <string name="batery_10">Batery less than 10%</string>
    <string name="batery_5">Batery less than 5%</string>
    <string name="camping_on">Camping mode: ON</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camping_off">Camping mode: OFF</string>
    <string name="data_alert">Enter valid data</string>
    <string name="removed_item"> Removed</string>
    <string name="signup">Sign Up</string>
    <string name="creating_mesage">Creating Account...</string>
    <string name="signUp_error">Sign Up failed</string>
    <string name="weight_error">Enter a valid weight</string>
    <string name="name_error">Enter at least 3 characters</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="exit_save">Exit and Save</string>
    <string name="call">Call</string>
    <string name="age_error">Enter a valid age</string>
    <string name="field_error">This field should not be empty</string>
    <string name="positive_error">Please enter a positive number</string>
    <string name="number_error">Please enter a number first</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="steps">STEPS</string>
    <string name="distance">DISTANCE</string>
    <string name="distance_1">Distance: </string>
    <string name="weight_s">WEIGHT</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="distance_ph">Distance per hour: </string>
    <string name="steps_ph">Steps per hour: </string>
    <string name="time_passed">Time Passed: </string>
    <string name="authenticating">Authenticating...</string>
    <string name="login_failed">Login Failed</string>
    <string name="email_error">Enter a valid email</string>
    <string name="weight_1">Weight</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="age_1">Age</string>
    <string name="create_account">Create Account</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="timer">Timer</string>
    <string name="minutes_1">Minutes</string>
    <string name="change">Change</string>
    <string name="restart">Restart</string>
    <string name="number">Number</string>\
    <string name="contact_name">Name: Contact</string>
    <string name="backpack">Backpack</string>


</resources>
